Update sonarqubeCheck.groovy